# victor

.github/workflows/: android-apk-flutter.yml  android-apk.yml  web-demo-pages.yml  web-probe.yml
elpian/: Cargo.toml  README.md
elpian/dart/: Cargo.toml
elpian/dart/flutter/: demo_app.dart
elpian/dart/src/: async_loop.rs  core.rs  dart_ui.rs  governance.rs  isolate.rs  lib.rs  runtime.rs  wasm_api.rs  widgets.rs
elpian/dart/tests/: flutter_app.rs  widgets.rs
elpian/dart2elpian/: Cargo.toml
elpian/dart2elpian/src/: ast.rs  emitter.rs  lexer.rs  lib.rs  parser.rs  token.rs  transforms.rs
elpian/elpian-vm/: Cargo.toml
elpian/elpian-vm/src/: api.rs  lib.rs
elpian/elpian-vm/src/sdk/: capabilities.rs  compiler.rs  context.rs  data.rs  executor.rs  lifecycle.rs  limits.rs  mod.rs  program.rs  type_methods.rs  vm.rs
elpian/elpian-vm/src/sdk/stdlib/: mod.rs
elpian/elpian-vm/tests/: vm_features.rs  vm_shape_ops.rs
elpian/godot/: .gitignore  CASPIGAMES.md  FLUTTER.md  README.md  patch-web-export.mjs
elpian/godot/capi/: Cargo.toml
elpian/godot/capi/src/: lib.rs  manager.rs
elpian/godot/capi/tests/: e2e.rs  js_guest.rs  multi_vm.rs  run_caspar_prelude.rs  run_caspigames.rs  run_demo.rs  run_flutter_3d_demo.rs  run_flutter_demo.rs  run_react_3d_demo.rs  run_tps.rs  run_tritonland.rs  timer_spawn.rs
elpian/godot/extension/: CMakeLists.txt  SConstruct
elpian/godot/flutter_host/: README.md  pubspec.yaml
elpian/godot/prelude/: CASPAR.md  REACT.md  caspar.js  flutter.js  godot.dart  godot.js  net.js  react.js  ui.js
elpian/godot/project/: caspigames.tscn  elpian_godot.gdextension  export_presets.cfg  main.tscn  project.godot  react_3d_demo.tscn  react_demo.tscn
elpian/js2elpian/: Cargo.toml
elpian/js2elpian/src/: lib.rs
elpian/js2elpian/tests/: js_compiler.rs  js_conformance.rs  js_shape_ops.rs  tritonland_boot.rs  tritonland_net.rs
elpian/web-demo/: README.md  canvaskit_test.mjs  index.html  interactive.html  skia_vm.html  widgets.html  widgets_app.dart  widgets_test.mjs
pending-work/acorn-sample/: compiler.js  package-lock.json  package.json
pending-work/jsx-compiler/: main.js  output.js  package-lock.json  package.json  program.jsx
pending-work/prompts/: total.prm  type_1_definition.prm  type_2_assignment.prm  type_3_calculation.prm  type_4_define_func.prm  type_5_cond_branch.prm  type_6_jump_operation.prm  type_7_return_operation.prm  type_8_function_call.prm  type_9_host_api_call.prm  type_checker.prm
presentation/: README.md  Victor-App-Framework.pptx  build_presentation.py
templates/victor-nextjs/: README.md  jsconfig.json  package-lock.json  package.json  victor.config.mjs
templates/victor-nextjs/app/: layout.jsx  page.jsx
victor/: Cargo.toml  README.md
victor/bridge/: .gitignore  FLUTTER.md  GAME_DESIGN.md  README.md
victor/dart/src/: binding.rs  (+7 more)
victor/dart2elpian/: Cargo.toml
victor/dart2elpian/src/: parser.rs  token.rs
victor/dart2elpian/tests/: dart_runtime.rs
victor/web-demo/: .gitignore  README.md  app.dart  canvaskit.html  canvaskit_bridge.js  counter.dart  flutter.html  flutter_test.mjs  interactive_test.mjs  skia_guest.dart  skia_vm_test.mjs  test.mjs
wiki/: 01-architecture.md  02-elpian-vm.md  03-javascript.md  04-dart.md  05-godot-bridge.md  06-vui.md  07-flutter-bridge.md  08-vreact.md  09-networking.md  10-building-and-ci.md  11-recipes.md  12-gotchas.md  README.md
(+91 files in other folders)
