[package]
name = "elpian-vm"
version = "0.1.0"
edition = "2021"
description = "Elpian AST-based bytecode VM — a pure executor. Ingests Elpian AST JSON / bytecode (produced by front-end crates such as js2elpian / dart2elpian) and executes it, yielding host calls to the embedding runtime."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
