[package]
name = "elpian-godot-capi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI over the Elpian VM's Dart runtime for embedding in the Godot GDExtension bridge. Exposes create/run/invoke/pump/free plus a host-callback seam so the C++ GodotController services the guest's godot.* askHost calls. No JIT anywhere: the VM stays a pausing bytecode interpreter."

[lib]
name = "elpian_godot"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
dart = { path = "../../dart", features = ["dart"] }
serde_json = "1.0"
